# PracticaPAG-Mancuso-P3

./: CMakeLists.txt  Gui.cpp  Gui.h  ReadMe.md  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp  pag03-vs.glsl
Desktop/Archivos_P5/: catalogo.html  contact.html  corporate.html  index.html
Desktop/PracticaPAG-Mancuso-P3-main/: CMakeLists.txt  Camara.cpp  Camara.h  Gui.cpp  Gui.h  ReadMe.md  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  conandata.yml  main.cpp  pag05-fs.glsl  pag05-vs.glsl
Desktop/PracticaPAG-Mancuso-P3-main/glad/include/glad/: glad.h
Desktop/PracticaPAG-P3-main/: CMakeLists.txt  Gui.cpp  Gui.h  Renderer.cpp  Renderer.h  main.cpp  pag03-fs.glsl
IdeaProjects/Practica1Implementacion/: Implementacion.md  README.md  SolucionAnalisis.md  pom.xml
IdeaProjects/Practica1Implementacion/src/main/java/es/ujaen/ssccdd/: Constantes.java
IdeaProjects/Practica1Implementacion/src/main/java/es/ujaen/ssccdd/datos/: Bicicleta.java  BicicletaRecord.java  EstacionBicicletas.java  EventoSistema.java  Peticion.java  PuntoRecarga.java  ZonaMantenimiento.java
IdeaProjects/Practica1Implementacion/src/main/java/es/ujaen/ssccdd/tareas/: CamionRedistribucionTask.java  GestorTransporteTask.java  TareaFinalizacion.java  TecnicoMantenimientoTask.java  UsuarioTask.java
IdeaProjects/Practica1Implementacion/src/test/java/es/ujaen/ssccdd/datos/: BicicletaRecordTest.java  BicicletaTest.java  EstacionBicicletasTest.java  EventoSistemaTest.java  PeticionTest.java  PuntoRecargaTest.java  ZonaMantenimientoTest.java
glad/src/: glad.c
